--- a/Lab1/TP1-Hugo.ipynb
+++ b/Lab1/TP1-Hugo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4  1445  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "4  1407  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "2  1298         0.0                   0.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ets</th>\n",
+       "      <th>etype</th>\n",
+       "      <th>eprice</th>\n",
+       "      <th>eqty</th>\n",
+       "      <th>eside</th>\n",
+       "      <th>bp0</th>\n",
+       "      <th>bq0</th>\n",
+       "      <th>ap0</th>\n",
+       "      <th>aq0</th>\n",
+       "      <th>mid_price</th>\n",
+       "      <th>weighted_mid_price</th>\n",
+       "      <th>tick_size_bid</th>\n",
+       "      <th>tick_size_ask</th>\n",
+       "      <th>spread</th>\n",
+       "      <th>ts_next</th>\n",
+       "      <th>delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000000</th>\n",
+       "      <td>2017-01-18 09:01:00.026864</td>\n",
+       "      <td>A</td>\n",
+       "      <td>45650</td>\n",
+       "      <td>16107</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000001</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000001</th>\n",
+       "      <td>2017-01-18 09:01:00.026919</td>\n",
+       "      <td>A</td>\n",
+       "      <td>46405</td>\n",
+       "      <td>16107</td>\n",
+       "      <td>S</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000002</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000002</th>\n",
+       "      <td>2017-01-18 09:01:00.104442</td>\n",
+       "      <td>C</td>\n",
+       "      <td>45895</td>\n",
+       "      <td>200</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000003</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000003</th>\n",
+       "      <td>2017-01-18 09:01:00.105053</td>\n",
+       "      <td>A</td>\n",
+       "      <td>45875</td>\n",
+       "      <td>200</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000004</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000004</th>\n",
+       "      <td>2017-01-18 09:01:00.105062</td>\n",
+       "      <td>C</td>\n",
+       "      <td>45905</td>\n",
+       "      <td>200</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000005</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000005</th>\n",
+       "      <td>2017-01-18 09:01:00.105069</td>\n",
+       "      <td>C</td>\n",
+       "      <td>45900</td>\n",
+       "      <td>200</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000006</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000006</th>\n",
+       "      <td>2017-01-18 09:01:00.105455</td>\n",
+       "      <td>A</td>\n",
+       "      <td>45895</td>\n",
+       "      <td>200</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000007</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000007</th>\n",
+       "      <td>2017-01-18 09:01:00.121340</td>\n",
+       "      <td>C</td>\n",
+       "      <td>45935</td>\n",
+       "      <td>267</td>\n",
+       "      <td>B</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000008</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000008</th>\n",
+       "      <td>2017-01-18 09:01:00.121776</td>\n",
+       "      <td>A</td>\n",
+       "      <td>46040</td>\n",
+       "      <td>200</td>\n",
+       "      <td>S</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000009</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 00:00:00.000000009</th>\n",
+       "      <td>2017-01-18 09:01:00.121877</td>\n",
+       "      <td>A</td>\n",
+       "      <td>46035</td>\n",
+       "      <td>200</td>\n",
+       "      <td>S</td>\n",
+       "      <td>45945</td>\n",
+       "      <td>450</td>\n",
+       "      <td>46015</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>45980.0</td>\n",
+       "      <td>45961.962843</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1970-01-01 00:00:00.000000010</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     ets etype  eprice   eqty  \\\n",
+       "1970-01-01 00:00:00.000000000 2017-01-18 09:01:00.026864     A   45650  16107   \n",
+       "1970-01-01 00:00:00.000000001 2017-01-18 09:01:00.026919     A   46405  16107   \n",
+       "1970-01-01 00:00:00.000000002 2017-01-18 09:01:00.104442     C   45895    200   \n",
+       "1970-01-01 00:00:00.000000003 2017-01-18 09:01:00.105053     A   45875    200   \n",
+       "1970-01-01 00:00:00.000000004 2017-01-18 09:01:00.105062     C   45905    200   \n",
+       "1970-01-01 00:00:00.000000005 2017-01-18 09:01:00.105069     C   45900    200   \n",
+       "1970-01-01 00:00:00.000000006 2017-01-18 09:01:00.105455     A   45895    200   \n",
+       "1970-01-01 00:00:00.000000007 2017-01-18 09:01:00.121340     C   45935    267   \n",
+       "1970-01-01 00:00:00.000000008 2017-01-18 09:01:00.121776     A   46040    200   \n",
+       "1970-01-01 00:00:00.000000009 2017-01-18 09:01:00.121877     A   46035    200   \n",
+       "\n",
+       "                              eside    bp0  bq0    ap0   aq0  mid_price  \\\n",
+       "1970-01-01 00:00:00.000000000     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000001     S  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000002     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000003     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000004     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000005     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000006     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000007     B  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000008     S  45945  450  46015  1407    45980.0   \n",
+       "1970-01-01 00:00:00.000000009     S  45945  450  46015  1407    45980.0   \n",
+       "\n",
+       "                               weighted_mid_price  tick_size_bid  \\\n",
+       "1970-01-01 00:00:00.000000000        45961.962843            NaN   \n",
+       "1970-01-01 00:00:00.000000001        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000002        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000003        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000004        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000005        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000006        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000007        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000008        45961.962843            0.0   \n",
+       "1970-01-01 00:00:00.000000009        45961.962843            0.0   \n",
+       "\n",
+       "                               tick_size_ask  spread  \\\n",
+       "1970-01-01 00:00:00.000000000            NaN      70   \n",
+       "1970-01-01 00:00:00.000000001            0.0      70   \n",
+       "1970-01-01 00:00:00.000000002            0.0      70   \n",
+       "1970-01-01 00:00:00.000000003            0.0      70   \n",
+       "1970-01-01 00:00:00.000000004            0.0      70   \n",
+       "1970-01-01 00:00:00.000000005            0.0      70   \n",
+       "1970-01-01 00:00:00.000000006            0.0      70   \n",
+       "1970-01-01 00:00:00.000000007            0.0      70   \n",
+       "1970-01-01 00:00:00.000000008            0.0      70   \n",
+       "1970-01-01 00:00:00.000000009            0.0      70   \n",
+       "\n",
+       "                                                    ts_next         delta  \n",
+       "1970-01-01 00:00:00.000000000 1970-01-01 00:00:00.000000001  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000001 1970-01-01 00:00:00.000000002  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000002 1970-01-01 00:00:00.000000003  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000003 1970-01-01 00:00:00.000000004  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000004 1970-01-01 00:00:00.000000005  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000005 1970-01-01 00:00:00.000000006  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000006 1970-01-01 00:00:00.000000007  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000007 1970-01-01 00:00:00.000000008  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000008 1970-01-01 00:00:00.000000009  1.000000e-09  \n",
+       "1970-01-01 00:00:00.000000009 1970-01-01 00:00:00.000000010  1.000000e-09  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +2067,7 @@
     "# Plot\n",
     "plt.figure(figsize=(10, 6))\n",
     "for spread in [5, 10, 15, 20]:\n",
-    "    plt.plot(middle_bin_values, pivot_data[spread], label=f'Spread {spread} ticks')\n",
+    "    plt.plot(middle_bin_values, pivot_data[spread], label=f'Spread {spread}')\n",
     "    \"\"\" plt.fill_between(middle_bin_values, \n",
     "                     pivot_data[spread] - pivot_data_vol[spread], \n",
     "                     pivot_data[spread] + pivot_data_vol[spread], \n",
