--- a/Lab1/DHF-LAB1-Pasche-Yeremian.ipynb
+++ b/Lab1/DHF-LAB1-Pasche-Yeremian.ipynb
@@ -2021,12 +2021,14 @@
     "df_trades = df_trades.set_index('ets').sort_index()\n",
     "\n",
     "# Features\n",
-    "df_trades['imbalance'] = (df_trades['bq0'] - df_trades['aq0']) / (df_trades['bq0'] + df_trades['aq0'])\n",
+    "df_trades['imbalance'] = (df_trades['bq0'] - df_trades['aq0']) / \\\n",
+    "                 (df_trades['bq0'] + df_trades['aq0'])\n",
     "df_trades['spread'] = df_trades['ap0'] - df_trades['bp0']\n",
     "df_trades['mid_price'] = (df_trades['bp0'] + df_trades['ap0']) / 2\n",
     "df_trades['mid_price_move'] = df_trades['mid_price'].diff(-1).fillna(0)\n",
     "\n",
-    "df_trades['trade_sign'] = df_trades['eside'].apply(lambda x: 1 if x == 'B' else 0)\n",
+    "df_trades['trade_sign'] = df_trades['eside'].apply(\n",
+    "                                    lambda x: 1 if x == 'B' else 0)\n",
     "\n",
     "# Lag Features (past trades & price movements)\n",
     "for lag in [1, 2, 3]:\n",
@@ -2038,13 +2040,15 @@
     "df_trades.dropna(inplace=True)\n",
     "\n",
     "# Select features and target\n",
-    "features = ['imbalance', 'spread', 'mid_price_move', 'imbalance_lag1', 'spread_lag1', 'mid_price_move_lag1']\n",
+    "features = ['imbalance', 'spread', 'mid_price_move', \n",
+    "        'imbalance_lag1', 'spread_lag1', 'mid_price_move_lag1']\n",
     "target = 'trade_sign'\n",
     "X = df_trades[features]\n",
     "y = df_trades[target]\n",
     "\n",
     "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
+    "                                    test_size=0.2, random_state=42)\n",
     "\n",
     "# Train Model using Logistic Regression\n",
     "model = LogisticRegression()\n",
