--- a/Lab1/TP1-Final.ipynb
+++ b/Lab1/TP1-Final.ipynb
@@ -1393,7 +1393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The difference between calendar time vs event time. \n"
+    "We can see that when the is low, the more amount of time between trades it is observed. This can be thought as the following: the bigger the spread, the faster the trades are executed. One way to see this it that when the spread is high, the stock is more volatile, there is a motivation to cross the bid-ask gap to execute orders."
    ]
   },
   {
