Add lecture notes on Poisson-based modeling of limit order books and update environment configuration
- Added a new PDF file containing lecture notes titled "7-2025-DHF-Lecture7-PoissonLOB.pdf" covering high-frequency data and limit order books.
- Created a new conda environment configuration file `env.yml` specifying dependencies for the project.
- Added a `requirements.txt` file listing essential Python packages for the project.

--- a/Lab1/DHF-LAB1-Pasche-Yeremian.ipynb
+++ b/Lab1/DHF-LAB1-Pasche-Yeremian.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,12 +174,12 @@
     "             if os.path.isfile(os.path.join(directory, f))]\n",
     "    return files\n",
     "\n",
-    "files = get_all_files(os.path.join('data', 'SG'))\n",
+    "files = get_all_files(os.path.join('Data', 'SG'))\n",
     "\n",
     "dfs = []\n",
     "\n",
     "for i, file in enumerate(files):\n",
-    "    df_small = pd.read_csv(os.path.join('data', 'SG', file), index_col = 0)\n",
+    "    df_small = pd.read_csv(os.path.join('Data', 'SG', file), index_col = 0)\n",
     "    dfs.append(df_small)\n",
     "    #if i == 1:\n",
     "        #break  # < ----------------- remove this line to read all files\n",
